bindings/python/revault_api/_revault_native.py

    library.lockbox_set_form_field.restype = ctypes.c_bool
    library.lockbox_set_secret_form_field.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_set_secret_form_field.restype = ctypes.c_bool
    library.lockbox_list_form_records.argtypes = [ctypes.c_void_p]
    library.lockbox_list_form_records.restype = buffer_type
    library.lockbox_get_form_record.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_get_form_record.restype = buffer_type
    library.lockbox_delete_form_record.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_delete_form_record.restype = ctypes.c_bool
    library.lockbox_move_form_records.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_move_form_records.restype = ctypes.c_bool
    library.lockbox_get_form_field.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.lockbox_get_form_field.restype = buffer_type
    library.lockbox_get_secret_form_field.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.POINTER(ctypes.c_void_p)]
    library.lockbox_get_secret_form_field.restype = ctypes.c_bool
    library.lockbox_to_bytes.argtypes = [ctypes.c_void_p]
    library.lockbox_to_bytes.restype = buffer_type
    library.lockbox_free.argtypes = [ctypes.c_void_p]
    library.lockbox_free.restype = None
    library.vault_is_running.argtypes = []
    library.vault_is_running.restype = ctypes.c_bool
    library.vault_forget_all.argtypes = []
    library.vault_forget_all.restype = ctypes.c_bool
    library.key_contact_generate.argtypes = []
    library.key_contact_generate.restype = ctypes.c_void_p
    library.key_contact_from_private.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.key_contact_from_private.restype = ctypes.c_void_p
    library.key_contact_public.argtypes = [ctypes.c_void_p]
    library.key_contact_public.restype = buffer_type
    library.key_contact_private.argtypes = [ctypes.c_void_p]
    library.key_contact_private.restype = buffer_type
    library.key_contact_public_from_bytes.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.key_contact_public_from_bytes.restype = ctypes.c_void_p
    library.key_contact_public_free.argtypes = [ctypes.c_void_p]
    library.key_contact_public_free.restype = None
    library.key_contact_free.argtypes = [ctypes.c_void_p]
    library.key_contact_free.restype = None
    library.key_contact_encrypt.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.key_contact_encrypt.restype = ctypes.c_void_p
    library.key_contact_decrypt.argtypes = [ctypes.c_void_p, ctypes.c_void_p]
    library.key_contact_decrypt.restype = buffer_type
    library.key_contact_wrapped_public.argtypes = [ctypes.c_void_p]
    library.key_contact_wrapped_public.restype = buffer_type
    library.key_contact_wrapped_ciphertext.argtypes = [ctypes.c_void_p]
    library.key_contact_wrapped_ciphertext.restype = buffer_type
    library.key_contact_wrapped_encrypted.argtypes = [ctypes.c_void_p]
    library.key_contact_wrapped_encrypted.restype = buffer_type
    library.key_contact_wrapped_free.argtypes = [ctypes.c_void_p]
    library.key_contact_wrapped_free.restype = None
    library.key_signing_generate.argtypes = []
    library.key_signing_generate.restype = ctypes.c_void_p
    library.key_signing_from_private.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.key_signing_from_private.restype = ctypes.c_void_p
    library.key_signing_public.argtypes = [ctypes.c_void_p]
    library.key_signing_public.restype = buffer_type
    library.key_signing_private.argtypes = [ctypes.c_void_p]
    library.key_signing_private.restype = buffer_type
    library.key_signing_public_from_bytes.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.key_signing_public_from_bytes.restype = ctypes.c_void_p
    library.key_signing_public_free.argtypes = [ctypes.c_void_p]
    library.key_signing_public_free.restype = None
    library.key_signing_free.argtypes = [ctypes.c_void_p]
    library.key_signing_free.restype = None
    library.vault_key_export_private.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_export_private.restype = buffer_type
    library.vault_key_export_public.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_export_public.restype = buffer_type
    library.vault_key_import_private.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_import_private.restype = ctypes.c_void_p
    library.vault_key_import_public.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_import_public.restype = ctypes.c_void_p
    library.vault_key_fingerprint.argtypes = [ctypes.c_void_p]
    library.vault_key_fingerprint.restype = buffer_type
    library.vault_key_format_hex.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_format_hex.restype = buffer_type
    library.vault_key_decode_hex.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_decode_hex.restype = buffer_type
    library.vault_key_format_crockford.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_format_crockford.restype = buffer_type
    library.vault_key_format_crockford_reading.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_format_crockford_reading.restype = buffer_type
    library.vault_key_decode_crockford.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_decode_crockford.restype = buffer_type
    library.vault_key_hex_encode.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_hex_encode.restype = buffer_type
    library.vault_key_hex_decode.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_key_hex_decode.restype = buffer_type
    library.vault_directory_open.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_open.restype = ctypes.c_void_p
    library.vault_structure_version_current.argtypes = []
    library.vault_structure_version_current.restype = ctypes.c_uint32
    library.vault_directory_probe_structure_version.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_probe_structure_version.restype = ctypes.c_uint32
    library.vault_directory_open_or_create_default.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_open_or_create_default.restype = ctypes.c_void_p
    library.vault_directory_replace_default.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_replace_default.restype = ctypes.c_void_p
    library.vault_directory_change_password.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_change_password.restype = ctypes.c_bool
    library.vault_directory_change_default_password.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_change_default_password.restype = ctypes.c_bool
    library.vault_directory_replace.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_replace.restype = ctypes.c_void_p
    library.vault_directory_open_or_create.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_open_or_create.restype = ctypes.c_void_p
    library.vault_directory_root.argtypes = [ctypes.c_void_p]
    library.vault_directory_root.restype = buffer_type
    library.vault_directory_structure_version.argtypes = [ctypes.c_void_p]
    library.vault_directory_structure_version.restype = ctypes.c_uint32
    library.vault_directory_list_private_keys.argtypes = [ctypes.c_void_p]
    library.vault_directory_list_private_keys.restype = buffer_type
    library.vault_directory_list_private_key_names.argtypes = [ctypes.c_void_p]
    library.vault_directory_list_private_key_names.restype = buffer_type
    library.vault_directory_list_contact_names.argtypes = [ctypes.c_void_p]
    library.vault_directory_list_contact_names.restype = buffer_type
    library.vault_directory_list_form_aliases.argtypes = [ctypes.c_void_p]
    library.vault_directory_list_form_aliases.restype = buffer_type
    library.vault_directory_private_key_exists.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_private_key_exists.restype = ctypes.c_bool
    library.vault_directory_delete_private_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_delete_private_key.restype = ctypes.c_bool
    library.vault_directory_store_private_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.vault_directory_store_private_key.restype = ctypes.c_bool
    library.vault_directory_load_private_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_load_private_key.restype = ctypes.c_void_p
    library.vault_directory_load_private_key_generation.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint16]
    library.vault_directory_load_private_key_generation.restype = ctypes.c_void_p
    library.vault_directory_store_contact.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
    library.vault_directory_store_contact.restype = ctypes.c_bool
    library.vault_directory_load_contact.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_load_contact.restype = ctypes.c_void_p
    library.vault_directory_contact_exists.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_contact_exists.restype = ctypes.c_bool
    library.vault_directory_delete_contact.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_delete_contact.restype = ctypes.c_bool
    library.vault_directory_list_contacts.argtypes = [ctypes.c_void_p]
    library.vault_directory_list_contacts.restype = buffer_type
    library.vault_directory_store_profile_email.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_store_profile_email.restype = ctypes.c_bool
    library.vault_directory_profile_email.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_profile_email.restype = buffer_type
    library.vault_directory_store_backup.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_store_backup.restype = ctypes.c_bool
    library.vault_directory_load_backup.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_load_backup.restype = buffer_type
    library.vault_directory_backup_count.argtypes = [ctypes.c_void_p]
    library.vault_directory_backup_count.restype = ctypes.c_uint64
    library.vault_directory_restore_private_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_bool]
    library.vault_directory_restore_private_key.restype = ctypes.c_bool
    library.vault_directory_load_owner_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t]
    library.vault_directory_load_owner_signing_key.restype = ctypes.c_void_p
    library.vault_directory_load_owner_signing_key_generation.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint16]
    library.vault_directory_load_owner_signing_key_generation.restype = ctypes.c_void_p
    library.vault_directory_store_contact_signing_key.argtypes = [ctypes.c_void_p, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_void_p]
